--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(222, 235, 240);
+    background-color: rgb(69, 175, 216);
     padding: 0;
     margin: 0;
 }
@@ -8,23 +8,22 @@ body {
     position: relative;
     top: 50px;
     margin: auto;
-    max-width: 390px;
-    width: 50vmax;
-    height: 70vh;
+    max-width: 320px;
+    height: 75vh;
     padding: 10px;
-    border: 10px solid rgb(222, 235, 240);
+    border: none;
     border-radius: 20px;
-    box-shadow: -8px -8px 10px rgba(0, 0, 0, 0.6), 8px 8px 10px rgba(199, 199, 199, 0.25), inset 2px 2px 5px rgba(181, 188, 190, 0.6), inset -5px -5px 5px rgba(0, 0, 0, 0.3);
+    background-color: black;
 }
 
 .display {
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     height: 80px;
     padding: 5px;
     background-color: rgb(222, 235, 240);
-    box-shadow: -2px -2px 10px rgba(0, 0, 0, 0.8), 2px 2px 10px rgba(255, 255, 255, 0.25), inset -2px -2px 5px rgba(255, 255, 255, 0.6), inset 2px 2px 5px rgba(0, 0, 0, 0.3);
-    border: 5px solid rgb(15, 197, 60);
+    /* box-shadow: -2px -2px 10px rgba(0, 0, 0, 0.8), 2px 2px 10px rgba(255, 255, 255, 0.25), inset -2px -2px 5px rgba(255, 255, 255, 0.6), inset 2px 2px 5px rgba(0, 0, 0, 0.3);
+    border: 5px solid rgb(15, 197, 60); */
     border-radius: 5px;
 }
 
@@ -33,11 +32,14 @@ body {
 }
 
 .operations {
-    margin-right: 10px;
-    padding: 5px;
+    /* margin-right: 10px; */
+    /* padding: 5px; */
     display: grid;
-    grid-template-columns: repeat(5, minmax(10%, 1fr));
-    gap: 5px 10px;
+    align-items: center;
+    justify-content: center;
+    /* grid-template-columns: minmax(10%, 1fr); */
+    grid-template-columns: 65px 65px 65px 65px 65px;
+    gap: 1px 1px;
 }
 
 .zero {
@@ -46,17 +48,24 @@ body {
 }
 
 .equals {
-    grid-area: span;
     grid-column-start: 4;
     grid-column-end: 6;
 }
 
+button {
+    transition: all 200ms ease;
+}
+
+button:hover {
+    transform: scale(1.1);
+}
+
 .num {
-    width: 60px;
-    height: 60px;
-    background-color: blue;
+    /* width: 65px; */
+    height: 65px;
+    background-color: rgb(88, 151, 218);
     border: none;
-    border-radius: 4px;
+    border-radius: 30px;
     cursor: pointer;
     margin: 2px;
 }
@@ -65,11 +74,16 @@ body {
 .clear,
 .equals,
 .operation {
-    width: 60px;
-    height: 60px;
+    /* width: 65px; */
+    height: 65px;
     background-color: rgb(0, 194, 26);
     border: none;
-    border-radius: 4px;
+    border-radius: 30px;
     cursor: pointer;
     margin: 2px;
+}
+
+button:active {
+    filter: brightness(0.6);
+    transform: scale(0.95, 0.95);
 }
